--- a/v2.6
+++ b/v2.6
@@ -1,2 +1,4 @@
 - Fixed Youtube Vanced not installing after chosen
 - Added S20 Live Wallpapers in to AROMA choices
+- Added Bixby button remap choice in AROMA
+- Added Dynamic Lockscreen choice in AROMA
