--- a/v2.6
+++ b/v2.6
@@ -1,4 +1,5 @@
 - Fixed Youtube Vanced not installing after chosen
+- Fixed Samsung Contacts not installing after chosen
+- Fixed Samsung Dialer crashing
 - Added S20 Live Wallpapers in to AROMA choices
-- Added Bixby button remap choice in AROMA
-- Added Dynamic Lockscreen choice in AROMA
+- Added Dynamic Lockscreen
