--- a/v2.6
+++ b/v2.6
@@ -2,3 +2,4 @@
 - Fixed Samsung Contacts not installing after chosen
 - Fixed Samsung Dialer crashing
 - Added S20 Live Wallpapers in to AROMA choices
+- Added Chinese Smart Manager into AROMA choices
