--- a/v2.6
+++ b/v2.6
@@ -1,4 +1,5 @@
 - Fixed Youtube Vanced not installing after chosen
 - Fixed Samsung Contacts not installing after chosen
 - Fixed Samsung Dialer crashing
+- Fixed Device Care not showing app list at all
 - Added S20 Live Wallpapers into AROMA choices
